@@ -10,6 +10,7 @@ Version 1.1.9 work in progress
 - Chg: Upgraded JQuery UI to 1.8.14 (Sam Dark)
 - Chg: Upgraded jQuery to 1.6.2 (Sam Dark)
 - Chg: Reverted back the changes made to fix issue 2284 (Qiang)
+- Enh #2387: Numeric keys are now displayed in error/exception stacktrace call argument if array isn't 0..X indexed (Sam Dark)
 
 Version 1.1.8 June 26, 2011
 ---------------------------
